# tequilapi/docs/swagger.json
@@ -79,33 +79,11 @@
         "operationId": "Authenticate",
         "parameters": [
           {
+            "$ref": "#/definitions/AuthRequest",
             "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/AuthRequest"
-            }
+            "in": "body"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Authentication succeeded",
-            "schema": {
-              "$ref": "#/definitions/AuthResponse"
-            }
-          },
-          "400": {
-            "description": "Failed to parse or request validation failed",
-            "schema": {
-              "$ref": "#/definitions/APIError"
-            }
-          },
-          "401": {
-            "description": "Authentication failed",
-            "schema": {
-              "$ref": "#/definitions/APIError"
-            }
-          }
-        }
+        ]
       }
     },
     "/auth/login": {
@@ -118,33 +96,11 @@
         "operationId": "Login",
         "parameters": [
           {
+            "$ref": "#/definitions/AuthRequest",
             "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/AuthRequest"
-            }
+            "in": "body"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Authentication succeeded",
-            "schema": {
-              "$ref": "#/definitions/AuthResponse"
-            }
-          },
-          "400": {
-            "description": "Failed to parse or request validation failed",
-            "schema": {
-              "$ref": "#/definitions/APIError"
-            }
-          },
-          "401": {
-            "description": "Authentication failed",
-            "schema": {
-              "$ref": "#/definitions/APIError"
-            }
-          }
-        }
+        ]
       }
     },
     "/auth/login-mystnodes": {
@@ -155,14 +111,14 @@
         ],
         "summary": "LoginMystnodesInit",
         "operationId": "LoginMystnodesInit",
-        "responses": {
-          "200": {
-            "description": "link response",
-            "schema": {
-              "$ref": "#/definitions/MystnodesSSOLinkResponse"
-            }
+        "parameters": [
+          {
+            "type": "string",
+            "description": "a redirect to send authorization grant to",
+            "name": "redirect_url",
+            "in": "query"
           }
-        }
+        ]
       },
       "post": {
         "description": "SSO login using grant provided by mystnodes.com",
@@ -170,15 +126,7 @@
           "SSO"
         ],
         "summary": "LoginMystnodesWithGrant",
-        "operationId": "LoginMystnodesWithGrant",
-        "responses": {
-          "200": {
-            "description": "grant was verified against mystnodes using PKCE workflow. This will set access token cookie."
-          },
-          "401": {
-            "description": "grant failed to be verified"
-          }
-        }
+        "operationId": "LoginMystnodesWithGrant"
       }
     },
     "/auth/logout": {
@@ -188,12 +136,7 @@
           "Authentication"
         ],
         "summary": "Logout",
-        "operationId": "Logout",
-        "responses": {
-          "200": {
-            "description": "Logged out successfully"
-          }
-        }
+        "operationId": "Logout"
       }
     },
     "/auth/password": {
@@ -206,30 +149,11 @@
         "operationId": "changePassword",
         "parameters": [
           {
+            "$ref": "#/definitions/ChangePasswordRequest",
             "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/ChangePasswordRequest"
-            }
+            "in": "body"
           }
-        ],
-        "responses": {
-          "200": {
-            "description": "Password changed successfully"
-          },
-          "400": {
-            "description": "Failed to parse or request validation failed",
-            "schema": {
-              "$ref": "#/definitions/APIError"
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "schema": {
-              "$ref": "#/definitions/APIError"
-            }
-          }
-        }
+        ]
       }
     },
     "/config": {
